# backend_python

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml  start.sh
Django/: README.md
Django/brushup/: manage.py
Django/brushup/brushup/: asgi.py  settings.py  urls.py  wsgi.py
meronia/: db.sqlite3  manage.py
meronia/meronia/: asgi.py  settings.py  urls.py  wsgi.py
meronia/nginx/: default.conf
meronia/todos/: models.py  urls.py  views.py
meronia/todos/migrations/: 0001_initial.py
