[tool.poetry]
name = "backend_project"
version = "0.1.0"
description = ""
authors = ["ske-kr <54828276+ske-kr@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "==3.8.6"
Django = "^3.2.9"
djangorestframework = "^3.12.4"
gunicorn = "^20.1.0"
django-cors-headers = "^3.10.0"
psycopg2-binary = "^2.9.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
